<resources>
    <string name="app_name">iChef</string>
    <string name="lbl_ingredientes">Ingredientes:</string>
    <string name="lbl_descricao">Descripção:</string>
    <string name="tela_principal">Tela Principal</string>
    <string name="favoritos">Favoritos</string>
    <string name="lbl_tool_bar_title">IChef</string>
    <string name="sem_conexao">Sem conexão</string>
    <string name="baixando_informacoes_das_recetas">Baixando informações das recetas</string>
    <string name="nao_favoritos">Não tem recetas favoritas</string>
    <string name="uri_desconhecida">Uri Desconhecida</string>
    <string name="error_inserir">Error ao inserir em</string>
    <string name="add_favoritos">Adicionado a favoritos</string>
    <string name="delet_favoritos">Removido de favoritos</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="add_fav">Add Favoritos</string>
    <string name="msg_add_widget">Adicionado a Widget</string>
    <string name="msg_delet_widget">Removido de Widget</string>
    <string name="add_widget_favoritos">Adicionado a Widget e Favoritos</string>
    <string name="msg_delet_fav_and_widget">Removindo widget e favoritos</string>
    <string name="msg_nao_video">Não tem video de este passo</string>
    <string name="contDes_sem_conexao_internet">Sem conexão a internet</string>
    <string name="contDesc_atualizar">Atualizar, intentar novamente a conexão</string>
    <string name="contDesc_play">Play</string>
    <string name="contDesc_pause">Pause</string>
    <string name="contDesc_receta">Receta de cocina</string>
    <string name="contDesc_video_indisponivel">Video indisponivél</string>
    <string name="contDesc_receta_desejada">Receta desejada</string>
    <string name="contDesc_thumbnail">Thumbnail do passo</string>
    <string name="contDesc_btn_add_favorito">Botão para adicionar favorito</string>
    <string name="contDesc_btn_add_widget">Botão para adicionar widget</string>
</resources>
