<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btn_favorito"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/add_fav"
        android:drawableBottom="@drawable/favorites"
        android:background="@color/colorPrimaryLight"
        android:contentDescription="@string/contDesc_btn_add_favorito"/>

    <Button
        android:id="@+id/btn_widget"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/add_widget"
        android:drawableBottom="@drawable/widget"
        android:background="@color/colorPrimaryLight"
        android:contentDescription="@string/contDesc_btn_add_widget"/>

</LinearLayout>