<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDivider">

    <include layout="@layout/tool_bar"
        android:id="@+id/tool_bar">
    </include>

    <GridView
        android:id="@+id/grid_view"
        android:layout_below="@id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:clipToPadding="false"
        android:columnWidth="150dp"
        android:gravity="center"
        android:horizontalSpacing="1dp"
        android:numColumns="1"
        android:paddingTop="1dp"
        android:scrollbarStyle="outsideOverlay"
        android:stretchMode="columnWidth"
        android:verticalSpacing="1dp"
        android:clickable="true">

    </GridView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_aguarde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBar"
        android:layout_centerHorizontal="true"
        android:text="@string/baixando_informacoes_das_recetas"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/img_SemConexao"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/sem_wifi"
        android:visibility="gone"
        android:contentDescription="@string/contDes_sem_conexao_internet"/>


    <TextView
        android:id="@+id/tv_semConexao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_SemConexao"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryText"
        android:text="@string/sem_conexao"/>

    <TextView
        android:id="@+id/tv_semFavoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryText"
        android:text="@string/nao_favoritos"/>

    <ImageView
        android:id="@+id/img_atualizar"
        android:layout_marginTop="8dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@id/tv_semConexao"
        android:src="@drawable/btn_atualizar"
        android:visibility="gone"
        android:onClick="atualizar"
        android:contentDescription="@string/contDesc_atualizar"/>

</RelativeLayout>